# c-labs

c-caesar-bruteforce/: CMakeLists.txt  README.md  main.c
c-center-text/: CMakeLists.txt  main.c
c-pract1/: CMakeLists.txt  README.md
c-pract10/: 1.cpp  1.txt  10.cpp  11.cpp  12.cpp  13.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  19.txt  2.cpp  20.cpp  21.cpp  22.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  9.txt  CMakeLists.txt
c-pract11/: 1.cpp  2.cpp  2.txt  2.txt_copy  3.cpp  4.cpp  4.txt  5.cpp  6.cpp  7.4.cpp  7.5.cpp  8.cpp  9.cpp  CMakeLists.txt
c-pract12/: 1.cpp  10.cpp  11.cpp  13.cpp  14.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
c-pract13/: 1.cpp  2.cpp  3.cpp  4.1.cpp  4.2.cpp  4.cpp  5.cpp  6.b.cpp  6.cpp  7.cpp  CMakeLists.txt  README.md
c-pract14/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.1.cpp  8.cpp  9.cpp  CMakeLists.txt  README.md
c-pract2/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.c  7.cpp  8.cpp  CMakeLists.txt  README.md
c-pract3/: 1.cpp  12.cpp  15.cpp  2.cpp  3.cpp  4.cpp  5.cpp  7.cpp  9.cpp  CMakeLists.txt
c-pract5/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
c-pract6/: 1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4.cpp  5.cpp  8.cpp  9.cpp  CMakeLists.txt
c-pract7/: 1.cpp  10.cpp  12.cpp  14.cpp  15.cpp  16.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
c-pract8/: 1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
c-tasks/: 3n1.c  CMakeLists.txt  chess.c  isPrime.c  numbers.c  pract11_1.c  pract11_2.c  pract11_3.c  pract11_4.c  pract11_5.c  words_in_border.c
c-tasks/13/1/: fuel13-1b.c  fuel13-2a.c  fuel13-2a.h
c-tasks/13/2/: fuel13-1b.c  fuel13-2a.c  fuel13-2a.h
c-tasks/13/3/: main.c
c-tasks/13/4/: main.c
c-tasks/13/5/: main.c
c-tasks/13/6/: main.c  set.c  sets.h
