cmake_minimum_required(VERSION 3.14)
project(c_pract10)

set(CMAKE_CXX_STANDARD 14)

add_executable(c_pract10_1 1.cpp)
add_executable(c_pract10_2 2.cpp)
add_executable(c_pract10_3 3.cpp)
add_executable(c_pract10_4 4.cpp)
add_executable(c_pract10_5 5.cpp)
add_executable(c_pract10_6 6.cpp)
add_executable(c_pract10_7 7.cpp)
add_executable(c_pract10_8 8.cpp)
add_executable(c_pract10_9 9.txt 9.cpp)
add_executable(c_pract10_10 10.cpp)
add_executable(c_pract10_11 11.cpp)
add_executable(c_pract10_12 12.cpp)
add_executable(c_pract10_13 13.cpp)
add_executable(c_pract10_15 15.cpp)
add_executable(c_pract10_16 16.cpp)
add_executable(c_pract10_17 17.cpp)
add_executable(c_pract10_18 18.cpp)
add_executable(c_pract10_19 19.cpp)
add_executable(c_pract10_20 20.cpp)
add_executable(c_pract10_21 21.cpp)
add_executable(c_pract10_22 22.cpp)