cmake_minimum_required(VERSION 3.14)
project(c_pract14)

set(CMAKE_CXX_STANDARD 14)

add_executable(c_pract14_1 1.cpp)
add_executable(c_pract14_2 2.cpp)
add_executable(c_pract14_3 3.cpp)
add_executable(c_pract14_4 4.cpp)
add_executable(c_pract14_5 5.cpp)
add_executable(c_pract14_6 6.cpp)
add_executable(c_pract14_7 7.cpp)
add_executable(c_pract14_8 8.cpp)   # ?
add_executable(c_pract14_8.1 8.1.cpp)
add_executable(c_pract14_9 9.cpp)
add_executable(c_pract14_10 10.cpp)
add_executable(c_pract14_11 11.cpp)
add_executable(c_pract14_12 12.cpp)
add_executable(c_pract14_13 13.cpp) # ?
add_executable(c_pract14_14 14.cpp) # ?