cmake_minimum_required(VERSION 3.12)
project(pract2)

set(CMAKE_CXX_STANDARD 14)

add_executable(pract2_1 1.cpp)
add_executable(pract2_2 2.cpp)
add_executable(pract2_3 3.cpp)
add_executable(pract2_4 4.cpp)
add_executable(pract2_5 5.cpp)
add_executable(pract2_6 6.c)
add_executable(pract2_7 7.cpp)
add_executable(pract2_8 8.cpp)
add_executable(pract2_10 10.cpp)
add_executable(pract2_11 11.cpp)
add_executable(pract2_12 12.cpp)
add_executable(pract2_13 13.cpp)
add_executable(pract2_14 14.cpp)
add_executable(pract2_15 15.cpp)
add_executable(pract2_16 16.cpp)
add_executable(pract2_17 17.cpp)
add_executable(pract2_18 18.cpp)