cmake_minimum_required(VERSION 3.13)
project(c_pract3)

set(CMAKE_CXX_STANDARD 14)

add_executable(c_pract3_1 1.cpp)
add_executable(c_pract3_2 2.cpp)
add_executable(c_pract3_3 3.cpp)
add_executable(c_pract3_4 4.cpp)
add_executable(c_pract3_5 5.cpp)
add_executable(c_pract3_7 7.cpp)
add_executable(c_pract3_9 9.cpp)
add_executable(c_pract3_12 12.cpp)
add_executable(c_pract3_15 15.cpp)