cmake_minimum_required(VERSION 3.13)
project(pract5)

set(CMAKE_CXX_STANDARD 14)

add_executable(pract5_1 1.cpp)
add_executable(pract5_2 2.cpp)
add_executable(pract5_3 3.cpp)
add_executable(pract5_4 4.cpp)
add_executable(pract5_5 5.cpp)
add_executable(pract5_6 6.cpp)
add_executable(pract5_7 7.cpp)
add_executable(pract5_8 8.cpp)
add_executable(pract5_9 9.cpp)
add_executable(pract5_10 10.cpp)
add_executable(pract5_11 11.cpp)
add_executable(pract5_12 12.cpp)
add_executable(pract5_13 13.cpp)
add_executable(pract5_14 14.cpp)