cmake_minimum_required(VERSION 3.14)
project(c_pract7)

set(CMAKE_CXX_STANDARD 14)

add_executable(c_pract7_1 1.cpp)
add_executable(c_pract7_2 2.cpp)
add_executable(c_pract7_3 3.cpp)
add_executable(c_pract7_4 4.cpp)
add_executable(c_pract7_5 5.cpp)
add_executable(c_pract7_6 6.cpp)
add_executable(c_pract7_7 7.cpp)
add_executable(c_pract7_8 8.cpp)
add_executable(c_pract7_9 9.cpp)
add_executable(c_pract7_10 10.cpp)
add_executable(c_pract7_12 12.cpp)
add_executable(c_pract7_14 14.cpp)
add_executable(c_pract7_15 15.cpp)
add_executable(c_pract7_16 16.cpp)
add_executable(c_pract7_17 17.cpp)