cmake_minimum_required(VERSION 3.12)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled isPrime.c)
add_executable(13_1 13/1/fuel13-1b.c 13/1/fuel13-2a.c)
add_executable(13_2 13/2/fuel13-1b.c 13/2/fuel13-2a.c)
add_executable(13_3 13/3/main.c)
add_executable(13_4 13/4/main.c)
add_executable(13_5 13/5/main.c)
add_executable(13_6 13/6/main.c 13/6/set.c)
add_executable(3n 3n1.c)
add_executable(pract11_1 pract11_1.c)
add_executable(pract11_2 pract11_2.c)
add_executable(pract11_3 pract11_3.c)
add_executable(pract11_4 pract11_4.c)
add_executable(pract11_5 pract11_5.c)
add_executable(chess chess.c)
add_executable(word words_in_border.c)
add_executable(c numbers.c)